# smc

./: .clang-format  .gitignore  BIOS.INC  BLDTAB.ASM  CLCLHO.ASM  CMakeLists.txt  COMGEN.ASM  CURRENT.STS  DISCMP.ASM  DISDYN.ASM  DISLST.ASM  DISTAB.ASM  DOS.INC  EVALCO.ASM  EXCLUD.ASM  INCLUD.ASM  InnerLoop.txt  METHOD.ASM  README.TXT  SMC.ASM  SMC.INC  SMC.MAK  SMC.STS  SMCUSER.DOC  SMCUSER.RTF  SMCUSER.TXT  TRANSP.ASM  azure-pipelines.yml  basedef.h  buildtable.cpp  bulklist.h  compose.cpp  filer.cpp  filer.h  fragment.h  readme.md  smc.cpp  smc32.BRO  smc32.DEF  smc32.DPD  (+8 more)
.github/workflows/: ci.yml
docs/: index.html  smc32advanced.html  smc32examples.html  smc32tech.html  smc32versions.html
src/: Resource.rc  basedef.h  buildtable.cpp  bulkhash.h  bulklist.h  compose.cpp  compose_asm.cpp  compose_c.cpp  composeloop.cpp  composeloop.hpp  composeloop.inc  filer.cpp  filer.h  fragment.h  library.cpp  method.cpp  music.cpp  ring.cpp  ring.h  smc.cpp  smc.h  smc32.vcxproj  smc32.vcxproj.filters  smcfile.cpp  testbed.cpp  transpose.cpp
test/: test.bat  test.sh
test/data/: ba12a.mus  ba12aa.sf1.expected  ba12aa.smc  ca01.cf1.expected  ca01.smc  ca08jf.sf1.expected  ca08jf.smc  ca10a.sf1.expected  ca10a.smc  hb10.mus  music8.mus
